fix: 커스텀 구분자 끝을 개행 문자가 아닌 \n로 변경